--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
 
   bidirectional_scroll_view:
+  cloud_firestore:
   cupertino_icons: ^0.1.3
   intl:
   photo_view:
